@@ -1,6 +1,11 @@
 Change Notes
 =============
 
+2009-10-13 jbornema
+	- JDBCLoader keeps in batch mode the records to be able to throw specific exception when
+	  SQLException occures
+	- ETLgineServer.loadJob(String scriptName) added used by Launch class to dynamic load scripts
+
 2009-10-07 jbornema
 	- DataPoolInitializerUtil.ensureCube(...) converts CubeFlexCalc to CubePreCache if requested.
 
